<resources>
    <string name="app_name">CurrenciesApp</string>
    <string name="favourites">Favourites</string>
    <string name="ok_word">OK</string>
    <string name="favourite_error">Changing favourite currency state occurred!</string>
    <string name="sort">Sort</string>
    <string name="all">All</string>
    <string name="choose_base_currency">Choose base currency</string>
    <string name="dismiss">Dismiss</string>
    <string name="currencies_list">Currencies list</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="value">Value</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>