<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sort"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sortWayGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/sortWayGroup"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/currency_item_shape"
        android:checkedButton="@id/alphabeticalRadio"
        app:layout_constraintBottom_toTopOf="@+id/sortTypeGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <RadioButton
            android:id="@+id/alphabeticalRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alphabetic" />

        <RadioButton
            android:id="@+id/valueRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/sortTypeGroup"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/currency_item_shape"
        android:checkedButton="@id/ascendingRadio"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortWayGroup">

        <RadioButton
            android:id="@+id/ascendingRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/descendingRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descending" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ok_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sortTypeGroup"
        app:layout_constraintStart_toStartOf="@+id/sortTypeGroup"
        app:layout_constraintTop_toBottomOf="@+id/sortTypeGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>